# Algorithms-Memory-Manager

./: Allocator.cpp  Allocator.h  BestFit.cpp  BestFit.h  CMakeLists.txt  CustomMemoryManager.cpp  CustomMemoryManager.h  FirstFit.cpp  FirstFit.h  GlobalFlag.cpp  GlobalFlag.h  GlobalTests.h  OverloadOps.cpp  OverloadOps.h  Point.h  README.md  Singleton.h  SingletonAllocator.h  SpecialPoint.h  StressTest.cpp  StressTest.h  WorstFit.cpp  WorstFit.h  algoNew.cpp  algoNew.h  main.cpp  myAllocator.cpp  myAllocator.h
.github/workflows/: build.yaml
